kubernetes/base/shipping-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-api
spec:
  selector:
    app: shipping-api
  ports:
    - name: http
      port: 80
      targetPort: http
