kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-demo
spec:
  ingressClassName: traefik
  rules:
    - host: orders.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orders-api
                port:
                  number: 80
    - host: shipping.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shipping-api
                port:
                  number: 80
    - host: rabbitmq.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
